add service for cache and sending code

--- a/src/main/resources/result-cn.properties
+++ b/src/main/resources/result-cn.properties
@@ -14,7 +14,51 @@ FAILURE.TOKEN.EXPIRE=Token过期
 SUCCESS.TOKEN=2100
 SUCCESS.TOKEN.ALL=Token验证成功
 
+FAILURE.CACHE=3000
+FAILURE.CACHE.KEY_OR_VALUE_IS_NULL=键或值为null
+FAILURE.CACHE.SET_STRING=向缓存中添加元素失败
+FAILURE.CACHE.KEY_IS_NULL=键为null
+FAILURE.CACHE.VALUE_IS_NULL=值为null
+
+SUCCESS.CACHE=3100
+SUCCESS.CACHE.SET_STRING=向缓存中添加元素成功
+SUCCESS.CACHE.GET_STRING=从缓存中查询元素成功
+
+FAILURE.CODE=4000
+FAILURE.CODE.SEND=发送失败
+FAILURE.CODE.METHOD_PROPERTIES_IS_NULL=方法参数为空
+FAILURE.CODE.PLATFORM_ERROR=验证码发送方式不存在
+
+SUCCESS.CODE=4100
+SUCCESS.CODE.SEND=发送成功
+
+FAILURE.VERIFICATION=5000
+FAILURE.VERIFICATION.METHOD_PROPERTIES_IS_NULL=方法参数为null
 FAILURE.LOGIN=1000
+
+SUCCESS.VERIFICATION=5100
+SUCCESS.VERIFICATION.CREATE_CODE=验证码生成发送缓存成功
+SUCCESS.VERIFICATION.VERIFY_CODE=验证过程成功
+
+FAILURE.REGISTER=6000
+FAILURE.REGISTER.ALL=注册失败
+FAILURE.REGISTER.INFORMATION_IS_NULL=注册字段缺失
+FAILURE.REGISTER.PLATFORM_ERROR=注册方式不存在
+FAILURE.REGISTER.CODE_ERROR=验证码错误
+FAILURE.REGISTER.REPETITION_EMAIL=邮箱已被注册
+FAILURE.REGISTER.REPETITION_PHONE=手机号已被注册
+FAILURE.REGISTER.METHOD_PROPERTIES_IS_NULL=注册方法参数为null
+
+SUCCESS.REGISTER=6100
+SUCCESS.REGISTER.ALL=注册成功
 
 SUCCESS.LOGIN=1100
 SUCCESS.LOGIN.ALL=登录成功
+
+FAILURE.USER=7000
+FAILURE.USER.QUERY_INFORMATION=
+FAILURE.USER.UPDATE=更新失败
+
+SUCCESS.USER=7100
+SUCCESS.USER.QUERY_INFORMATION=查询成功
+SUCCESS.USER.UPDATE=更新成功
