finish user module

--- a/src/main/resources/result-cn.properties
+++ b/src/main/resources/result-cn.properties
@@ -58,6 +58,13 @@ SUCCESS.LOGIN.ALL=登录成功
 FAILURE.USER=7000
 FAILURE.USER.QUERY_INFORMATION=
 FAILURE.USER.UPDATE=更新失败
+FAILURE.USER.METHOD_PROPERTIES_IS_NULL=方法参数缺失
+FAILURE.USER.NOT_SEND=请先点击发送验证码
+FAILURE.USER.USER_IS_EMPTY=用户不存在
+FAILURE.USER.REPETITION_EMAIL=邮箱已被绑定
+FAILURE.USER.REPETITION_PHONE=手机号已被绑定
+FAILURE.USER.EMAIL_IS_EMPTY=用户未绑定邮箱
+FAILURE.USER.CODE_ERROR=验证码错误
 
 SUCCESS.USER=7100
 SUCCESS.USER.QUERY_INFORMATION=查询成功
